--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,31 @@
 {% extends "layout.html" %}
 {% block body %}
-<div style="width: 100%; overflow: hidden;">
-    <div id="board" style="width: 400px; float: left;"> Left </div>
-    <div style="margin-left: 620px;"> 
-<a class="twitter-timeline" href="https://twitter.com/hashtag/TwitterPlaysChess"
-    data-widget-id="590242953668485122">#TwitterPlaysChess Tweets</a>
-<script>!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        
-<!--<a class="twitter-timeline" href="https://twitter.com/plays_chess"
-    data-widget-id="590241102906658817">Tweets by @plays_chess</a>
-<script>!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
---> 
- </div>
-</div>
 
-<div id="board" style="width: 400px"></div>
+<div style="width: 100%; overflow: hidden;"><h1 style="text-align: center">Twitter Plays Chess</h1></div>
+
+<div style="width: 100%; overflow: hidden;">
+    <!--<div id="board" style="width: 400px; float: left;"> Left </div>--!>
+    <div id="board" style="width: 33%; float: left; align: center"> Left </div>
+
+    <!--<div style="margin-left: 620px;">--!> 
+    <div style="width: 33%; float: left; align: center">
+        <!-- Twitter Feed !-->
+        <a class="twitter-timeline" href="https://twitter.com/hashtag/TwitterPlaysChess"
+            data-widget-id="590242953668485122">#TwitterPlaysChess Tweets</a>
+        <script>!function(d,s,id){var
+            js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        
+    </div>
+
+    <!-- Votes Display !-->
+    <div id="votes" style="width: 33%; float: left; align: center">Votes
+    {% for vote in Votes %}
+        <strong>Move: </strong> {{ vote.move }} <br>
+        <strong>Count: </strong> {{ vote.count }} <br>
+    {% endfor %}
+    </div>
+</div>
 
 <script src="{{ url_for('static', filename='chess_ai.js') }}"></script>
 
 {% endblock %}
-
-
