Sorting table by descending count

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,15 @@
 <div style="width: 100%; overflow: hidden;"><h1 style="text-align: center">Twitter Plays Chess</h1></div>
 
 <div style="width:100%; overflow: hidden;">
-    <p>Twitter Plays Chess is a social experiment leveraging collective human intelligence to play chess. You can submit a vote for a move by making a tweet with the hashtag #TwitterPlaysChess. Moves must specify the square of the piece to move and the square to move to. For example, if the game has just started, tweeting 'a2a3 #TwitterPlaysChess' will vote for the pawn in square a2 to move to a3. Moves not of this format will not be accepted.</p>
+    <p>Twitter Plays Chess is a social experiment leveraging collective human
+    intelligence to play chess. You can submit a vote for a move by making a
+    tweet with the hashtag #TwitterPlaysChess. Moves must specify the square of
+    the piece to move and the square to move to. For example, if the game has
+    just started, tweeting 'a2a3 #TwitterPlaysChess' will vote for the pawn in
+    square a2 to move to a3. To vote for a new game, tweet 'newgame
+    #TwitterPlaysChess'. To get around Twitter's limitation on posting the same
+    tweet, you can add anything after the move itself (e.g. 'a2a3 I am awesome
+    #TwitterPlaysChess'). Moves not of the above format will not be accepted.</p>
 </div>
 
 <div style="width: 100%; overflow: hidden;">
